@@ -1,4 +1,4 @@
-/* $Id: client-cmd.c,v 1.5 2007-09-28 21:41:52 mxey Exp $ */
+/* $Id: client-cmd.c,v 1.6 2007-09-30 13:02:14 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -57,6 +57,8 @@ struct cmd client_cmd_table[] = {
 	{ 'l', client_cmd_fn_msg, MSG_LAST },
 	{ 'W', client_cmd_fn_msg, MSG_WINDOWLIST },
 	{ 'w', client_cmd_fn_msg, MSG_WINDOWLIST },
+	{ 'I', client_cmd_fn_msg, MSG_WINDOWINFO },
+	{ 'i', client_cmd_fn_msg, MSG_WINDOWINFO },
 };
 #define NCLIENTCMD (sizeof client_cmd_table / sizeof client_cmd_table[0])
 
